--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify ./src"
   },
   "dependencies": {
+    "@types/cookie": "^0.4.0",
     "@types/node": "^14.10.2",
+    "cookie": "^0.4.1",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   }
