--- a/package.json
+++ b/package.json
@@ -4,13 +4,31 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "commit": "git-cz",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify ./src"
   },
   "dependencies": {
     "@types/cookie": "^0.4.0",
     "@types/node": "^14.10.2",
     "cookie": "^0.4.1",
+    "inquirer": "^7.3.3",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "commitizen": "^4.2.1",
+    "husky": "^4.3.0"
   }
 }
